k8s/apps/namespace-apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    kuma.io/sidecar-injection: enabled
