k8s/apps/otel-agent-apps.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-agent-apps
  namespace: apps
spec:
  selector:
    matchLabels:
      app: otel-agent-apps
  template:
    metadata:
      labels:
        app: otel-agent-apps
    spec:
      containers:
        - name: otel-agent-apps
          image: otel/opentelemetry-collector-contrib:0.91.0
          args: ["--config=/etc/otel-agent-apps.yaml"]
          volumeMounts:
            - name: otel-agent-apps-vol
              mountPath: /etc/otel-agent-apps.yaml
              subPath: otel-agent-apps.yaml
      volumes:
        - name: otel-agent-apps-vol
          configMap:
            name: otel-agent-apps-conf
