k8s/apps/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service
          ports:
            - containerPort: 8881
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: apps
spec:
  selector:
    app: auth-service
  ports:
    - port: 8881
      targetPort: 8881
